Change GroovyScriptExtension.load to use a map of context objects
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>