@@ -6,22 +6,29 @@
  */
 package com.powsybl.afs.ext.base;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.jimfs.Configuration;
 import com.google.common.jimfs.Jimfs;
-import com.powsybl.afs.*;
+import com.powsybl.afs.AbstractProjectFileTest;
+import com.powsybl.afs.AfsException;
+import com.powsybl.afs.FileExtension;
+import com.powsybl.afs.Folder;
+import com.powsybl.afs.Project;
+import com.powsybl.afs.ProjectFileExtension;
+import com.powsybl.afs.ProjectFolder;
+import com.powsybl.afs.ProjectNode;
+import com.powsybl.afs.ServiceExtension;
 import com.powsybl.afs.mapdb.storage.MapDbAppStorage;
 import com.powsybl.afs.storage.AppStorage;
 import com.powsybl.afs.storage.InMemoryEventsBus;
 import com.powsybl.afs.storage.NodeGenericMetadata;
 import com.powsybl.afs.storage.NodeInfo;
+import com.powsybl.iidm.network.DefaultNetworkListener;
 import com.powsybl.iidm.network.ExportersLoader;
 import com.powsybl.iidm.network.ExportersLoaderList;
 import com.powsybl.iidm.network.ImportConfig;
 import com.powsybl.iidm.network.ImportersLoader;
 import com.powsybl.iidm.network.ImportersLoaderList;
-import com.powsybl.iidm.network.DefaultNetworkListener;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.iidm.network.NetworkListener;
 import com.powsybl.iidm.serde.XMLExporter;
@@ -37,7 +44,12 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -64,17 +76,17 @@ class ImportedCaseTest extends AbstractProjectFileTest {
 
     @Override
     protected List<FileExtension> getFileExtensions() {
-        return ImmutableList.of(new CaseExtension(createImportersLoader()));
+        return List.of(new CaseExtension(createImportersLoader()));
     }
 
     @Override
     protected List<ProjectFileExtension> getProjectFileExtensions() {
-        return ImmutableList.of(new ImportedCaseExtension(createExportersLoader(), createImportersLoader(), new ImportConfig()));
+        return List.of(new ImportedCaseExtension(createExportersLoader(), createImportersLoader(), new ImportConfig()));
     }
 
     @Override
     protected List<ServiceExtension> getServiceExtensions() {
-        return ImmutableList.of(new LocalNetworkCacheServiceExtension());
+        return List.of(new LocalNetworkCacheServiceExtension());
     }
 
     @Override
@@ -84,7 +96,7 @@ class ImportedCaseTest extends AbstractProjectFileTest {
         NodeInfo rootFolderInfo = storage.createRootNodeIfNotExists("root", Folder.PSEUDO_CLASS);
 
         NodeInfo nodeInfo = storage.createNode(rootFolderInfo.getId(), "network", Case.PSEUDO_CLASS, "Test format", Case.VERSION,
-                new NodeGenericMetadata().setString("format", TestImporter.FORMAT));
+            new NodeGenericMetadata().setString("format", TestImporter.FORMAT));
         storage.setConsistent(nodeInfo.getId());
 
         fileSystem = Jimfs.newFileSystem(Configuration.unix());
@@ -122,15 +134,15 @@ class ImportedCaseTest extends AbstractProjectFileTest {
         // import case into project
         try {
             folder.fileBuilder(ImportedCaseBuilder.class)
-                    .build();
+                .build();
             fail();
         } catch (AfsException ignored) {
         }
         ImportedCase importedCase = folder.fileBuilder(ImportedCaseBuilder.class)
-                .withCase(aCase)
-                .withParameter("param1", "true")
-                .withParameters(ImmutableMap.of("param2", "1"))
-                .build();
+            .withCase(aCase)
+            .withParameter("param1", "true")
+            .withParameters(ImmutableMap.of("param2", "1"))
+            .build();
         assertNotNull(importedCase);
         assertFalse(importedCase.isFolder());
         assertNotNull(importedCase.getNetwork());
@@ -141,7 +153,7 @@ class ImportedCaseTest extends AbstractProjectFileTest {
         assertNotNull(importedCase.getNetwork(Collections.singletonList(mockedListener)));
         network.getSubstation("s1").setTso("tso_new");
         verify(mockedListener, times(1))
-                .onUpdate(network.getSubstation("s1"), "tso", null, "TSO", "tso_new");
+            .onUpdate(network.getSubstation("s1"), "tso", null, "TSO", "tso_new");
 
         // test network query
         assertEquals("[\"s1\"]", importedCase.queryNetwork(ScriptType.GROOVY, "network.substations.collect { it.id }"));
@@ -150,7 +162,7 @@ class ImportedCaseTest extends AbstractProjectFileTest {
         assertEquals(1, folder.getChildren().size());
         ProjectNode projectNode = folder.getChildren().get(0);
         assertNotNull(projectNode);
-        assertTrue(projectNode instanceof ImportedCase);
+        assertInstanceOf(ImportedCase.class, projectNode);
         ImportedCase importedCase2 = (ImportedCase) projectNode;
         assertEquals(TestImporter.FORMAT, importedCase2.getImporter().getFormat());
         assertEquals(2, importedCase2.getParameters().size());
@@ -180,15 +192,15 @@ class ImportedCaseTest extends AbstractProjectFileTest {
         assertTrue(folder.getChildren().isEmpty());
 
         ImportedCase importedCase = folder.fileBuilder(ImportedCaseBuilder.class)
-                .withFile(fileSystem.getPath("/work/network.tst"))
-                .withName("test")
-                .build();
+            .withFile(fileSystem.getPath("/work/network.tst"))
+            .withName("test")
+            .build();
         assertNotNull(importedCase);
         assertEquals("test", importedCase.getName());
 
         ImportedCase importedCase2 = folder.fileBuilder(ImportedCaseBuilder.class)
-                .withFile(fileSystem.getPath("/work/network.tst"))
-                .build();
+            .withFile(fileSystem.getPath("/work/network.tst"))
+            .build();
         assertNotNull(importedCase2);
         assertEquals("network", importedCase2.getName());
     }
@@ -207,15 +219,15 @@ class ImportedCaseTest extends AbstractProjectFileTest {
 
         Network network = Network.create("NetworkID", "scripting");
         ImportedCase importedCase1 = folder.fileBuilder(ImportedCaseBuilder.class)
-                .withName("test")
-                .withNetwork(network)
-                .build();
+            .withName("test")
+            .withNetwork(network)
+            .build();
         assertNotNull(importedCase1);
         assertEquals("test", importedCase1.getName());
 
         ImportedCase importedCase2 = folder.fileBuilder(ImportedCaseBuilder.class)
-                .withNetwork(network)
-                .build();
+            .withNetwork(network)
+            .build();
         assertNotNull(importedCase2);
         assertEquals("NetworkID", importedCase2.getName());
     }
